--- a/chamados-backend/.env
+++ b/chamados-backend/.env
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=chamados
+DB_DATABASE=meu_banco
 DB_USERNAME=root
 DB_PASSWORD=root
 
