--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     working_dir: /app
     volumes:
       - ./chamados-frontend:/app
+      - /app/node_modules
     ports:
       - "3000:3000"
     command: npm run dev
